# libgoogleassistant

./: CMakeLists.txt  README.md  googleassistant.pc.in  oss-pkg-info.yaml
files/systemd/: googleassistant.conf
include/: audioCapture.h  audioPlayback.h  googleAssistant.h  keywordDetector.h  speechRecognitionWorker.h
include/util/: common.h  logging.h
src/: audioCapture.cpp  audioPlayback.cpp  googleAssistant.cpp  keywordDetector.cpp  main.cpp  speechRecognitionWorker.cpp
src/util/: common.cpp  logging.cpp
tools/: action.en.json  device_id.json  device_model.json  get_credentials.sh  register_device_id.sh  register_device_model.sh  remove_device_id.sh  remove_device_model.sh
